--- a/app/src/main/res/drawable/total_price_background.xml
+++ b/app/src/main/res/drawable/total_price_background.xml
@@ -2,12 +2,12 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     
-    <solid android:color="#F5F5F5" />
+    <solid android:color="#F8F9FA" />
     
     <stroke
         android:width="1dp"
-        android:color="#E0E0E0" />
+        android:color="#E9ECEF" />
     
-    <corners android:radius="12dp" />
+    <corners android:radius="8dp" />
     
 </shape>
