--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -15,6 +15,7 @@
         android:background="@android:color/white" />
 
     <!-- App Header -->
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -30,9 +31,10 @@
             android:textColor="@android:color/black"
             android:textSize="24sp"
             android:textStyle="bold" />
+
         <ImageView
             android:id="@+id/profile_menu_button"
-            android:layout_width="18dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="?attr/selectableItemBackgroundBorderless"
             android:padding="4dp"
@@ -88,7 +90,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="4dp"
-                android:text="Describe yourself to others"
+                android:text="@string/login_to_customize"
                 android:textColor="#666666"
                 android:textSize="14sp" />
 
@@ -98,7 +100,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
-                android:text="@string/profile_edit"
+                android:text="@string/edit"
                 android:textSize="12sp"
                 android:textColor="#2196F3"
                 app:strokeColor="#2196F3"
@@ -107,6 +109,8 @@
         </LinearLayout>
 
     </LinearLayout>
+
+    
 
     <!-- Navigation Tabs -->
     <com.google.android.material.tabs.TabLayout
@@ -129,12 +133,15 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
-        android:padding="16dp">
+        android:padding="16dp"
+        android:fillViewport="true">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
+
+            
 
             <!-- Grow Smart Together Card -->
             <com.google.android.material.card.MaterialCardView
@@ -284,6 +291,19 @@
                 </LinearLayout>
 
             </com.google.android.material.card.MaterialCardView>
+
+            <Button
+                android:id="@+id/btnLanguage"
+                android:layout_width="157dp"
+                android:layout_height="50dp"
+                android:layout_marginEnd="8dp"
+                android:background="@android:color/holo_blue_dark"
+                android:clickable="true"
+                android:elevation="4dp"
+                android:focusable="true"
+                android:text="@string/language"
+                android:textColor="@android:color/white"
+                android:textSize="16sp" />
 
         </LinearLayout>
 
